[Feature] Allow to compare Karel

--- a/tests/demo/index.html
+++ b/tests/demo/index.html
@@ -51,10 +51,11 @@
                 </mundos>
                 <programas>
                     <programa nombre="p1" resultadoEjecucion="FIN PROGRAMA">
-                        <karel x="1" y="2"/>
+                        <karel x="1" y="2" direccion="OESTE"/>
                     </programa>
                 </programas>
-            </resultados>            
+            </resultados>
+           
         </textarea>
     </div>
     <div>
